--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -26,7 +26,7 @@
                                     right: 0.5rem">Sale</div>
 
                             <!-- Product image-->
-                            <img class="card-img-top" src="{{product.image.url}}" alt="..." />
+                            <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -54,7 +54,9 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+    <div class="text-center"><a class="btn
+        btn-outline-dark mt-auto" href="{% url 'product' product.id %}">View Product</a>
+    </div>
                             </div>
                         </div>
                     </div> 
@@ -65,7 +67,7 @@
                         <div class="card h-100">
                     
                             <!-- Product image-->
-                            <img class="card-img-top" src="{{product.image.url}}" alt="..." />
+                            <img class="card-img-top" src="{{ product.image.url }}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -81,8 +83,12 @@
                                 </div>
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                            <div class="card-footer p-4 pt-0 
+                            border-top-0
+                            bg-transparent">
+     <div class="text-center"><a class="btn btn-outline-dark mt-auto" 
+        href="{% url 'product' product.id %}">View Product</a>
+    </div>
                             </div>
                         </div>
                     </div> 
