Revisi Menambahkan Categories Produk

--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -26,8 +26,9 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'home' %}">All Products</a></li>
                             <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="{% url 'category' 'laptops-highend' %}">Laptops</a></li>
-                            <li><a class="dropdown-item" href="{% url 'category' 'playstation-PES' %}">PlayStation</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category' 'Laptops' %}">Laptops</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category' 'Cell-Phone' %}">Cell Phone</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category' 'Playstations' %}">Playstations</a></li>
                         </ul>
                     </li>
                 </ul>
