--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -40,11 +40,14 @@
 
                 {% else %}
                      Rp{{ product.price }}
+                     <br/>ID: {{ product.id }} 
                 {% endif %}
 
                 <br/><br/>
 
                 <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
+                <button type="button" value="{{ product.id }} 
+                "class="btn btn-secondary" id="add-cart">Add To Chart</button>
 
             </center>                 
 
@@ -58,6 +61,40 @@
     <br/><br/><br/><br/><br/><br/>
     <br/><br/><br/><br/><br/><br/><br/><br/>
     <br/><br/><br/><br/><br/><br/><br/><br/> 
+
+<script>
+  // Check if button pressed
+$(document).on('click', '#add-cart', function(e){
+    e.preventDefault();
+    $.ajax({ 
+        type: 'POST',
+        url: '{% url 'cart_add' %}',
+        data: {
+          product_id: $('#add-cart').val(),
+          csrfmiddlewaretoke: '{{ crsf_token }}',
+          action: 'post'
+
+        },
+
+        success: function(json){
+          console.log(json)
+        },
+
+        error: function(xhr, errmsg, err) {
+
+        }
+
+
+    });
+
+
+
+  })
+
+
+</script>
+
+
      
 
 {% endblock %}
