--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -34,10 +34,14 @@
                 </ul>
                 <form class="d-flex">
 
+                    <!-- Menambah cart -->
 <a href="{% url 'cart_summary' %}" class="btn 
 btn-outline-dark"><i class="bi-cart-fill me-1"></i>Cart
-<span class="badge bg-dark text-white ms-1 rounded-pill">
-    0</span></a>
+<span class="badge bg-dark text-white ms-1 rounded-pill" 
+id="cart_quantity">{{ cart|length }}
+
+
+</span></a>
 
     
                 </form>
