--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -67,17 +67,20 @@
 $(document).on('click', '#add-cart', function(e){
     e.preventDefault();
     $.ajax({ 
-        type: 'POST',
+        type: 'POST', 
         url: '{% url 'cart_add' %}',
         data: {
           product_id: $('#add-cart').val(),
-          csrfmiddlewaretoke: '{{ crsf_token }}',
+          csrfmiddlewaretoken: '{{ csrf_token }}',
           action: 'post'
 
         },
 
         success: function(json){
-          console.log(json)
+          // console.log(json)
+          document.getElementById("cart_quantity").
+          textContent = json.qty
+
         },
 
         error: function(xhr, errmsg, err) {
